修改文件: _posts/2020-5-25-初来乍到.md

--- a/_posts/2020-5-25-初来乍到.md
+++ b/_posts/2020-5-25-初来乍到.md
@@ -20,4 +20,4 @@ grammar_cjkRuby: true
 
 本博客用作生活的记录，记录的内容差不多也就上面所述的几个方面。目前学艺不精，所以专业知识方面分享出来也怕误人子弟，如果最后对自己的学习有帮助，我也会把笔记整理整理po上来。开设一个网站可以在锻炼写作能力同时加深自己的思维深度，客观分析，理性判断，**用博客自励，用文字自勉**。
 
-![enter description here](/path/to./images/QQ图片20190412150439_1.jpg)
+[enter description here](/images/QQ%E5%9B%BE%E7%89%8720190412150439_1.jpg)
