--- a/_posts/2020-5-28-时隔半年的等待.md
+++ b/_posts/2020-5-28-时隔半年的等待.md
@@ -13,7 +13,7 @@ grammar_cjkRuby: true
 回到日语考试的话题，我来分享一下我的整个考试的时间线。撇去报名的时间，2019年10月开始准备复习，11月进入正轨，12月1日参加考试，2020年1月22日网络查成绩，5月28日成绩单到手。一共7个多月的时间，其中11月是我最忙碌的时候。日语能力考分为词汇、语法、阅读、听力四个部分，从高中开始看动漫并追日圈的我，阅读和听力问题不大，可是单词量少得可怜，语法也几乎一窍不通。我相信很多自学日语的朋友也有这个问题，日语的听读能力一般问题不大，但是用于应试的基础素质却不达标。  
 想要过日语能力考，**相似词汇**一定要记住。清浊音，长促音，汉字的多种读法是N2最喜欢挖的坑，并且词汇题一定会有一题考拟声词，拟声词只能记，并且读音相似的太多了，注意不要记混了，我在最后一个月深知背单词已经来不及了，所以直接开始题海战术，从2010的真题开始刷起，边写边背，要注意不只是选项的4个单词，还要看看题干里的单词。  
 说起日语的语法，学到标日初下的同学们应该都知道有多头痛了，**固定搭配、词汇变形、敬语、介词助词的用法**。N2考试出题并不刁钻，能记住常用的语法结构和用法就可以过关。学语法还是推荐指导书和视频课辅助，我考试选了《新完全掌握》匹配某日语机构的网课，听起来就比硬看好理解多了，《新完全掌握》是几乎全日语编写的，每一个语法搭配的中文解释比文言文还难看懂，中文比日文难懂就成了好多考生把它闲置的理由。跟着网课老师把第一部分的每一个结构过了一遍之后，时间紧的就可以开始刷题了。刚开始刷完题一定要把错题的语法结构重新抄一遍、背一遍，做的题多了就可以标注每份卷子反复考的那几个语法，找到**出题规律**比题海战术要有效很多。  
-因为阅读对我来说难度不大，拿到真题之后什么都没准备就开始刷了，也没什么好总结的，看阅读不喜欢在原问标注的同学一定要有意识地让自己的笔动起来，有了痕迹，最后找答案的时候正确率会提高很多。  
+因为阅读对我来说难度不大，拿到真题之后什么都没准备就开始刷了，也没什么好总结的，看阅读不喜欢在原文标注的同学一定要有意识地让自己的笔动起来，有了痕迹，最后找答案的时候正确率会提高很多。  
 听力考察的是学生对信息的捕捉分析能力，**一定一定要做笔记**！短篇的对话简单在选项之后打对打叉就可以，后面的无题干部分要利用好试卷留下的空白。咨询类素材要记下所有提到的要素，最后根据说话人的态度保留正确选项。评论类的话题记下评论的对象，有时候会有多个对象，注意不要听漏了。有一些独白的语速比较快，可以先大致明白说话人在讲什么话题，最后根据他的语气判断说话人的态度。最后一部分听力一般会有多人讨论，或者多物的评价，这时候以人为首行，物为首列列出表格，根据说话人语气在相应的表格里做标记，就能直观明白得看出讨论的结果了。  
 现在回想起来，N2的考试的确不算什么难以攀登的大山，只要用心做了题，在考场上没有特殊情况就可以合格。语言的习得是一种技能的培养，他和学数学不一样，数学对我来说是学校课程的一部分，是对人大脑进行训练的一种方式；而语言不能算是一门学科，它是我们生活中必须拥有的能力，是与人沟通交流的工具。任何语言考试只是对目前自己掌握情况的一种认定，好让我们进行下一步的规划。所以，当日语学习者考到N1的标准，真正日语学习才刚刚开始，当我们掌握了一切该掌握的基础知识时，下一步就是把它融入生活，成为我们可以张嘴就来的工具。  
 
