修改文件: _posts/沉梦春夏之交的瑞典.md

--- a/_posts/沉梦春夏之交的瑞典.md
+++ b/_posts/沉梦春夏之交的瑞典.md
@@ -29,4 +29,6 @@ tags: '留学,瑞典'
   
 说起来也神奇，可能是我的身体比我早察觉到自己快到崩溃的极限了。11月课程的最后一天，我的心态突然变得轻松，那一瞬间，我似乎在上帝视角俯视整个班级，就像《夏日重现》的主角一样，跳脱出那个环境，思维突然清晰了起来，我意识到我如此费尽心思想塑造的形象，想维护的人际关系变得一点价值都没有，我意识到我一开始的决定是错误的，该值得重视的不应该是他们，我对于他们而言同样没有那么重要。  
   
-茅塞顿开后，我如获新生。可能之后还是会惧怕小组作业，害怕站上讲台做PPT演讲，但是我找到了自我调节的方法。既然自己无法改变客观条件，那我们就改变自己的态度。少了目的性，少了功利性，我似乎更适合无心插柳的结果。
+茅塞顿开后，我如获新生。可能之后还是会惧怕小组作业，害怕站上讲台做PPT演讲，但是我找到了自我调节的方法。既然自己无法改变客观条件，那我们就改变自己的态度。少了目的性，少了功利性，我似乎更适合无心插柳的结果。  
+  
+瑞典的冬天是漫长的，交织这些莫名其妙的emo事件，我的第一个北欧冬季过得非常痛苦。为了弥补这些伤痛，春天对我尤其地温柔。遇到更合适的朋友，并有意远离合不来的人，是我现当下重要的课题。可能冬季的气息还没消失殆尽的时候，我还在纠结自己的课题和就业，幸运的是，都是朋友把我从深渊拉了出来。日照变长，我们能看清的东西更多了，脑中的胡思乱想也变少了。这场留学还会继续辛苦下去吧，但是辛苦和快乐并不冲突。
